# api_authorisation_token_scraper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  setup.cfg
.github/workflows/: python-app.yml
api_authorisation_token_scraper/apple/: podcasts.py
src/: main.py
src/api_authorisation_token/: cacher.py  scraper.py
src/api_authorisation_token/api/apple/: music.py  podcasts.py
src/api_authorisation_token/scraper/apple/: podcasts.py
src/authorisation_token/api/apple/: music.py  podcasts.py
src/authorisation_token_scraper/api/apple/: music.py  podcasts.py
tests/api_authorisation_token/: cache_test.py  cacher_test.py
tests/api_authorisation_token/api/apple/: music_test.py  podcasts_test.py
tests/api_authorisation_token/scraper/apple/: podcasts_test.py
tests/apple/: podcasts_test.py  scraper_test.py
tests/authorisation_token/api/apple/: music_test.py  podcasts_test.py
tests/authorisation_token_scraper/api/apple/: music_test.py  podcasts_test.py
