[project]
name = 'api_authorisation_token_scraper'
version = "0.0.1"
description = 'Scrape authorisation tokens for various APIs.'
requires-python = ">=3.9"
authors = [
  {email = 'bencapadbury+github@protonmail.com'},
  {name = 'Ben Padbury'},
]

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"