[metadata]
name = api_authorisation_token_scraper
version = 0.0.1
description = Scrape authorisation tokens for various APIs.
author = Ben Padbury
author_email = bencapadbury+github@protonmail.com

[options]
install_requires =
    selenium >= 3.141.0
    selenium-wire >= 3.0.5
package_dir=
    =src
packages=find:

[options.packages.find]
where=src