[metadata]
name = authorisation-token-scraper
version = 0.0.1
author = Ben Padbury
author_email = bencapadbury+github@protonmail.com
description = A tool to scrape authorisation tokens from known sources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ben-Padbury/authorisation_token_scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    selenium >= 3.141.0
    selenium-wire >= 3.0.5

[options.packages.find]
where = src